<resources>
    <string name="app_name">牛13超市</string>
    <string name="pay_order">订单支付</string>
    <string name="scan">扫描</string>
    <string name="order_payment">订单结算</string>
    <string name="is_getting_product_details">正在获取商品信息</string>
    <string name="price">价格</string>

    <string name="format_price">￥ %1$s</string>
    <string name="format_desc">%1$s %2$s</string>
    <string name="get_product_detail_failing">未获取到商品信息</string>
    <string name="qr_position_tips">将二维码/条码放入框中，即可自动扫描</string>
    <string name="QR_code">二维码/条码</string>
    <string name="scanning">扫描中...</string>
    <string name="prompt">提示</string>
    <string name="confirm_remove_products">确定将商品移出购物车？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="money">金额</string>
    <string name="choose_payment_type">选择付款方式</string>
    <string name="zhifubao">支付宝</string>
    <string name="zhaohang">招商银行储蓄卡（尾号1236）</string>
    <string name="payment_success">支付成功</string>
    <string name="get_products_with_qrcode">凭此二维码到售货机提取商品</string>
    <string name="bucket_empty_tips">购物车没有商品，开始购物吧！</string>
    <string name="order_failed_please_retry">提交订单失败，请稍后重试</string>
    <string name="is_pushing_order">正在向系统提交订单</string>
    <string name="is_paying">正在付款...</string>
    <string name="payment_failure">付款失败，请稍后重新付款</string>
    <string name="payment_hacking">您提交的付款信息有误，未完成付款</string>

</resources>
