<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.gongmingqm10.markethacker.activity.PaymentActivity">

    <TextView
        android:id="@+id/money_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/money"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:paddingRight="50dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/total_price"
        android:layout_alignLeft="@id/money_label"
        android:layout_below="@id/money_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        tools:text="$121.00"
        />

    <View
        android:id="@+id/price_horizontal_line"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_below="@id/total_price"
        android:background="@color/divider"
        />

    <TextView
        android:id="@+id/payment_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_horizontal_line"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_payment_type"/>

    <View
        android:id="@+id/payment_type_horizontal_line"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:layout_below="@id/payment_type_label"
        android:background="@color/divider"
        />

    <LinearLayout
        android:id="@+id/container_zhifubao"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/payment_type_horizontal_line"
        >
        <ImageView
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:src="@drawable/zhifubao"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhifubao"
            android:textSize="18sp"
            android:textColor="@android:color/primary_text_light"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_zhaohang"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/container_zhifubao"
        >
        <ImageView
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:src="@drawable/zhaohang"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhaohang"
            android:textSize="18sp"
            android:textColor="@android:color/primary_text_light"
            />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:text="@string/ok"
        />

</RelativeLayout>
